--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                     <h1 class="puppyprint">
                         <span class="letter1">P</span><span class="letter2">u</span><span class="letter3">p</span><span class="letter4">p</span><span class="letter5">y</span><span class="letter6">p</span><span class="letter7">r</span><span class="letter8">i</span><span class="letter9">n</span><span class="letter10">t</span><span class="letter11">, </span><span class="other">print anything possible.</span>
                     </h1>
-                    <p>This is a stunning hero section.</p>
+                    <p>This is a stunning hero section. hehe</p>
                 </div>
             </div>
             
