--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             </div>
 
             <!-- cart button -->
-            <button class="btn">Button</button>
+            <button class="btn_cart">cart</button>
 
             <!-- hamburger menu icon -->
             <div class="hamburger-menu" id="hamburger-menu">
@@ -39,15 +39,43 @@
         <div class="index">
             <!-- hero -->
             <div class="hero">
-                <img src="resources/hero-one.png" alt="Hero Image" class="hero-image">
                 <div class="hero-content">
-                    <h1 class="puppyprint">
-                        <span class="letter1">P</span><span class="letter2">u</span><span class="letter3">p</span><span class="letter4">p</span><span class="letter5">y</span><span class="letter6">p</span><span class="letter7">r</span><span class="letter8">i</span><span class="letter9">n</span><span class="letter10">t</span><span class="letter11">, </span><span class="other">print anything possible.</span>
+                    <img src="resources/hero-one.png" alt="Hero Image" class="hero-image">
+
+                    <h1 class="headline">
+                        <span class="letter1">P</span><span class="letter2">u</span><span class="letter3">p</span><span class="letter4">p</span><span class="letter5">y</span><span class="letter6">p</span><span class="letter7">r</span><span class="letter8">i</span><span class="letter9">n</span><span class="letter10">t</span><span class="letter11">, </span><span class="other">print anything<br>possible.</span>
                     </h1>
-                    <p>This is a stunning hero section.</p>
+
+                    <!-- order now button -->
+                    <button class="btn_order">Order Now!</button>
                 </div>
             </div>
-            
+
+            <!-- hero -->
+            <div class="hero">
+                <div class="hero-content">
+                    <img src="resources/hero-one.png" alt="Hero Image" class="hero-image">
+
+                    <h1 class="headline">
+                        <span class="letter1">P</span><span class="letter2">u</span><span class="letter3">p</span><span class="letter4">p</span><span class="letter5">y</span><span class="letter6">p</span><span class="letter7">r</span><span class="letter8">i</span><span class="letter9">n</span><span class="letter10">t</span><span class="letter11">, </span><span class="other">print anything<br>possible.</span>
+                    </h1>
+
+                    <!-- order now button -->
+                    <button class="btn_order">Order Now!</button>
+                </div>
+            </div>
+
+
+
+
+
+
+
+
+
+
+
+
         </div>
         
 
