--- a/index.html
+++ b/index.html
@@ -52,16 +52,9 @@
             </div>
 
             <!-- hero -->
-            <div class="hero">
-                <div class="hero-content">
-                    <img src="resources/hero-one.png" alt="Hero Image" class="hero-image">
-
-                    <h1 class="headline">
-                        <span class="letter1">P</span><span class="letter2">u</span><span class="letter3">p</span><span class="letter4">p</span><span class="letter5">y</span><span class="letter6">p</span><span class="letter7">r</span><span class="letter8">i</span><span class="letter9">n</span><span class="letter10">t</span><span class="letter11">, </span><span class="other">print anything<br>possible.</span>
-                    </h1>
-
-                    <!-- order now button -->
-                    <button class="btn_order">Order Now!</button>
+            <div class="second">
+                <div class="second-content">
+                    
                 </div>
             </div>
 
