--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
         <!-- stylesheet -->
         <link rel="stylesheet" href="css/index.css">
+        <link rel="stylesheet" href="css/768px/index.css">
     </head>
 
     <body>
@@ -40,7 +41,7 @@
             <!-- hero -->
             <div class="hero">
                 <div class="hero-content">
-                    <img src="resources/hero-one.png" alt="Hero Image" class="hero-image">
+                    <img src="resources/hero-one.png" class="hero-image">
 
                     <h1 class="headline">
                         <span class="letter1">P</span><span class="letter2">u</span><span class="letter3">p</span><span class="letter4">p</span><span class="letter5">y</span><span class="letter6">p</span><span class="letter7">r</span><span class="letter8">i</span><span class="letter9">n</span><span class="letter10">t</span><span class="letter11">, </span><span class="other">print anything<br>possible.</span>
@@ -51,10 +52,56 @@
                 </div>
             </div>
 
-            <!-- hero -->
+            <!-- second -->
             <div class="second">
                 <div class="second-content">
-                    
+                    <h2>Check out our new features</h2>
+
+                    <div class="content-one">
+                        <div class="card">
+                            <img src="resources/F1.jpg" class="second-image">
+                            <h1 class="second-h1">
+                                Feature 1
+                            </h1>
+                            <p class="second-p">
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+                            </p>
+                        </div>
+                        <div class="card">
+                            <img src="resources/F2.jpg" class="second-image">
+                            <h1 class="second-h1">
+                                Feature 2
+                            </h1>
+                            <p class="second-p">
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet.
+                            </p>
+                        </div>
+                        <div class="card">
+                            <img src="resources/F3.jpg" class="second-image">
+                            <h1 class="second-h1">
+                                Feature 3
+                            </h1>
+                            <p class="second-p">
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+                            </p>
+                        </div>
+                    </div>
+
+                    <div class="content-two">
+
+
+
+
+
+
+
+
+
+
+
+
+                        
+                    </div>
                 </div>
             </div>
 
