--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                                     <img src="resources/S3.png" class="third-image">
                                     <div class="second-en">
                                         <h2 class="third-h2">Feature 3</h2>
-                                        <p class="third-p2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+                                        <p class="third-p2">Lorem hello ipsum dolor sit amet, consectetur adipiscing elit. 
                                         </p>
                                     </div>
                                 </div>
