--- a/index.html
+++ b/index.html
@@ -142,16 +142,23 @@
             <!-- third -->
             <div class="third">
                 <div class="third-content">
+                    <img src="resources/T1.png" class="third-pic">
+                    <div class="thirdy">
+                        <h1 class="thirdy-one">
+                            <span class="t1">Print anything </span><span class="t2">posible.</span>
+                        </h1>
+                        <p class="thirdy-two">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam lacinia leo vel risus volutpat pellentesque. Etiam maximus ipsum quis libero vulputate, id maximus libero suscipit. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam lacinia leo vel risus volutpat pellentesque. Etiam maximus ipsum quis libero vulputate, id maximus libero suscipit.
+                        </p>
 
-
-
-
-
-
-
+                        <button class="btn_third">Function Here!</button>
+                    </div>
                 </div>
             </div>
         </div>
+
+
+
 
         <script src="jscript/index.js"></script>
     </body>
