--- a/feedback.html
+++ b/feedback.html
@@ -23,9 +23,9 @@
             
             <!-- text -->
             <div class="nav-links">
-                <a class="active" href="index.html">Home</a>
+                <a href="index.html">Home</a>
                 <a href="#products">Products</a>
-                <a href="feedback.html">Feedback</a>
+                <a class="active" href="feedback.html">Feedback</a>
                 <a href="#shipping">Shipping</a>
                 <a href="#contact">Contact</a>
             </div>
