--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
             
             <!-- text -->
             <div class="nav-links">
-                <a class="active" href="#home">Home</a>
+                <a class="active" href="index.html">Home</a>
                 <a href="#products">Products</a>
-                <a href="#feedback">Feedback</a>
+                <a href="feedback.html">Feedback</a>
                 <a href="#shipping">Shipping</a>
                 <a href="#contact">Contact</a>
             </div>
