--- a/index.html
+++ b/index.html
@@ -213,9 +213,32 @@
                     </div>
 
                     <div class="fifth-brands">
-                        <h1>Trusted Brands</h1>
+                        <h2>Trusted Brands</h2> 
                         <div class="company">
-                            
+                            <div class="branded">
+
+                            </div>
+                            <div class="branded">
+
+                            </div>
+                            <div class="branded">
+
+                            </div>
+                            <div class="branded">
+
+                            </div>
+                            <div class="branded">
+
+                            </div>
+                            <div class="branded">
+
+                            </div>
+                            <div class="branded">
+
+                            </div>
+                            <div class="branded">
+
+                            </div>
                         </div>
                     </div>
                     
