--- a/feedback.html
+++ b/feedback.html
@@ -27,7 +27,7 @@
                 <a href="#products">Products</a>
                 <a class="active" href="feedback.html">Feedback</a>
                 <a href="#shipping">Shipping</a>
-                <a href="#contact">Contact</a>
+                <a href="contact.html">Contact</a>
             </div>
 
             <!-- cart button -->
@@ -82,6 +82,6 @@
         </div>
 
 
-        <script src="jscript/feedback.js"></script>
+       
     </body>
 </html>
