--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <a href="#products">Products</a>
                 <a href="feedback.html">Feedback</a>
                 <a href="#shipping">Shipping</a>
-                <a href="#contact">Contact</a>
+                <a href="contact.html">Contact</a>
             </div>
 
             <!-- cart button -->
