--- a/contact.html
+++ b/contact.html
@@ -25,10 +25,10 @@
             <!-- text -->
             <div class="nav-links">
                 <a href="index.html">Home</a>
-                <a href="#products">Products</a>
+                <a href="products.html">Products</a>
                 <a href="feedback.html">Feedback</a>
                 <a href="#shipping">Shipping</a>
-                <a class="active" href="contact.html">Contact</a>
+                <a class="active">Contact</a>
             </div>
 
             <!-- cart button -->
