--- a/feedback.html
+++ b/feedback.html
@@ -24,8 +24,8 @@
             <!-- text -->
             <div class="nav-links">
                 <a href="index.html">Home</a>
-                <a href="#products">Products</a>
-                <a class="active" href="feedback.html">Feedback</a>
+                <a href="products.html">Products</a>
+                <a class="active">Feedback</a>
                 <a href="#shipping">Shipping</a>
                 <a href="contact.html">Contact</a>
             </div>
