--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
             
             <!-- text -->
             <div class="nav-links">
-                <a class="active" href="index.html">Home</a>
-                <a href="#products">Products</a>
+                <a class="active">Home</a>
+                <a href="products.html">Products</a>
                 <a href="feedback.html">Feedback</a>
                 <a href="#shipping">Shipping</a>
                 <a href="contact.html">Contact</a>
@@ -341,65 +341,6 @@
 
                 <h2 class="patent">ICON Graphics Inc. All Rights Reserved.</h2>
             </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
         <!-- index -->
         </div>
