--- a/index.html
+++ b/index.html
@@ -51,7 +51,9 @@
                     </h1>
 
                     <!-- order now button -->
-                    <button class="btn_order">Order Now!</button>
+                    <a href="products.html">
+                        <button class="btn_order">Order Now!</button>
+                    </a>
                 </div>
             </div>
 
