--- a/products.html
+++ b/products.html
@@ -41,6 +41,64 @@
         </div>
 
         <div class="index">
+
+            <!-- first -->
+            <div class="first">
+                <div class="first-one">
+                    <h2>Product Overview</h2>
+
+                    <div class="photolinks">
+                        <a class="active" href="#allproducts">All Products</a>
+                        <a href="#photoprint">Photo Printing</a>
+                        <a href="#labels">Labels & Packaging</a>
+                        <a href="#business">Business</a>
+                    </div>
+                </div>
+
+                <div class="first-two">
+                    <div class="features">
+                        <h2>New Products</h2>
+
+                        <div class="content-one">
+                            <div class="card">
+                                <img src="resources/E1.png" class="second-image">
+                                <h1 class="second-h1">
+                                    Feature 1
+                                </h1>
+                                <p class="second-p">
+                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+                                </p>
+                            </div>
+                            <div class="card">
+                                <img src="resources/E2.png" class="second-image">
+                                <h1 class="second-h1">
+                                    Feature 2
+                                </h1>
+                                <p class="second-p">
+                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet.
+                                </p>
+                            </div>
+                            <div class="card">
+                                <img src="resources/E3.png" class="second-image">
+                                <h1 class="second-h1">
+                                    Feature 3
+                                </h1>
+                                <p class="second-p">
+                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+
+
+
+
+
+
+
+                </div>
+            </div>
+
             <!-- sixth -->
             <div class="sixth">
                 <div class="sixth-content">
