--- a/products.html
+++ b/products.html
@@ -48,16 +48,17 @@
                     <h2>Product Overview</h2>
 
                     <div class="photolinks">
-                        <a class="active" href="#allproducts">All Products</a>
-                        <a href="#photoprint">Photo Printing</a>
-                        <a href="#labels">Labels & Packaging</a>
-                        <a href="#business">Business</a>
+                        <a id="all-products-link" onclick="showAllProducts()">All Products</a>
+                        <a id="photo-printing-link" onclick="showPhotoPrinting()">Photo Printing</a>
+                        <a id="labels-packaging-link" onclick="showLabels()">Labels & Packaging</a>
+                        <a id="business-link" onclick="showBusiness()">Business</a>
                     </div>
                 </div>
 
                 <div class="first-two">
                     <div class="features">
-                        <h2>New Products</h2>
+                        <div class="features-products-d">
+                            <h2 class="new-h2">New Products</h2>
 
                         <div class="content-one">
                             <div class="card">
@@ -88,20 +89,108 @@
                                 </p>
                             </div>
                         </div>
+                        </div>
+
+                        <div class="all-products-d">
+                            <h2 class="prod-h2">All Products</h2>
+
+                            <div class="photocards-d">
+                                <div class="cards-d"></div>
+                                <div class="cards-d"></div>
+                                <div class="cards-d"></div>
+                                <div class="cards-d"></div>
+                                <div class="cards-d"></div>
+                                <div class="cards-d"></div>
+                                <div class="cards-d"></div>
+                            </div>
+                        </div>
+
+                        <div class="photo-products-d">
+                            <h2 class="prod-h2-c">Photo Printing</h2>
+
+                            <div class="photocards-d">
+                                <div class="cards-d-p"></div>
+                                <div class="cards-d-p"></div>
+                                <div class="cards-d-p"></div>
+                                <div class="cards-d-p"></div>
+                                <div class="cards-d-p"></div>
+                                <div class="cards-d-p"></div>
+                                <div class="cards-d-p"></div>
+                            </div>
+                        </div>    
+
+                        <div class="labels-products-d">
+                                <h2 class="prod-h2-c">Labels & Packaging</h2>
+
+                                <div class="photocards-d">
+                                    <div class="cards-d-l"></div>
+                                    <div class="cards-d-l"></div>
+                                    <div class="cards-d-l"></div>
+                                    <div class="cards-d-l"></div>
+                                    <div class="cards-d-l"></div>
+                                    <div class="cards-d-l"></div>
+                                    <div class="cards-d-l"></div>
+                                </div>
+                            </div>
+
+                            <div class="business-products-d">
+                                <h2 class="prod-h2-c">Business</h2>
+                                
+                                <div class="photocards-d">
+                                    <div class="cards-d-b"></div>
+                                    <div class="cards-d-b"></div>
+                                    <div class="cards-d-b"></div>
+                                    <div class="cards-d-b"></div>
+                                    <div class="cards-d-b"></div>
+                                    <div class="cards-d-b"></div>
+                                    <div class="cards-d-b"></div>
+                                </div>
+                            </div>    
                     </div>
-
-
-
-
-
-
-
                 </div>
             </div>
 
             <!-- sixth -->
             <div class="sixth">
                 <div class="sixth-content">
+                    <div class="carde-one">
+                        <div class="carde">
+                            <img src="resources/S1.png" class="third-image">
+                            <div class="second-en">
+                                <h2 class="third-h2">Feature 1</h2>
+                                <p class="third-p2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+                                </p>
+                            </div>
+                        </div>
+                        <div class="carde">
+                            <img src="resources/S2.png" class="third-image">
+                            <div class="second-en">
+                                <h2 class="third-h2">Feature 2</h2>
+                                <p class="third-p2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="carde-two">
+                        <div class="carde">
+                            <img src="resources/S3.png" class="third-image">
+                            <div class="second-en">
+                                <h2 class="third-h2">Feature 3</h2>
+                                <p class="third-p2">Lorem hello ipsum dolor sit amet, consectetur adipiscing elit. 
+                                </p>
+                            </div>
+                        </div>
+                        <div class="carde">
+                            <img src="resources/S4.png" class="third-image">
+                            <div class="second-en">
+                                <h2 class="third-h2">Feature 4</h2>
+                                <p class="third-p2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    
                     <h2>Notice</h2>
                     <ul>
                         <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam lacinia leo vel risus volutpat pellentesque. Etiam maximus ipsum quis libero vulputate, id maximus libero suscipit.
