--- a/products.html
+++ b/products.html
@@ -96,12 +96,13 @@
 
                             <div class="photocards-d">
                                 <a href="photocard.html"><div class="cards-d"></div></a>
-                                <div class="cards-d"></div>
-                                <div class="cards-d"></div>
-                                <div class="cards-d"></div>
-                                <div class="cards-d"></div>
-                                <div class="cards-d"></div>
-                                <div class="cards-d"></div>
+                                <a href="photocard.html"><div class="cards-d"></div></a>
+                                <a href="photocard.html"><div class="cards-d"></div></a>
+                                <a href="photocard.html"><div class="cards-d"></div></a>
+                                <a href="photocard.html"><div class="cards-d"></div></a>
+                                <a href="photocard.html"><div class="cards-d"></div></a>
+                                <a href="photocard.html"><div class="cards-d"></div></a>
+                                <a href="photocard.html"><div class="cards-d"></div></a>
                             </div>
                         </div>
 
