--- a/contact.html
+++ b/contact.html
@@ -77,12 +77,36 @@
                     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3861.1690485042504!2d121.09598417414945!3d14
                     .589441277351682!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3397c7671b164a0b%3A0x4959ba8a60ceca5a!2sICON%20Graphics%20Inc
                     .!5e0!3m2!1sen!2sph!4v1713668749672!5m2!1sen!2sph" 
-                    width="350" height="500" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    width="350" height="500" style="border:0px; border-radius: 10px;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </div>
             </div>               
         </div> 
-        <div class="contact-footer">  
-            
+
+         <!-- footer -->
+         <div class="footer">
+            <div class="footer-content">
+                <img src="resources/logo.png" class="footer-logo">
+
+                <div class="row">
+                    <!-- links -->
+                    <div class="soc-links">
+                        <a href="#facebook">Facebook</a>
+                        <a href="#instagram">Instagram</a>
+                        <a href="#twitter">Twitter</a>
+                        <a href="#other">Other</a>
+                    </div>
+
+                    <!-- contacts -->
+                    <div class="soc-contacts">
+                        <a href="#twitter">Ortigas Ave., Ext., 22 Ortigas Ave,
+                            Pasig, 1608 Metro Manila</a>
+                        <a href="#facebook">1234-567-89</a>
+                        <a href="#instagram">email@email.com.ph</a>
+                    </div>
+                </div>
+            </div>
+
+            <h2 class="patent">ICON Graphics Inc. All Rights Reserved.</h2>
         </div>
      
     </body>
