--- a/feedback.html
+++ b/feedback.html
@@ -81,6 +81,33 @@
             
         </div>
 
+         <!-- footer -->
+         <div class="footer">
+            <div class="footer-content">
+                <img src="resources/logo.png" class="footer-logo">
+
+                <div class="row">
+                    <!-- links -->
+                    <div class="soc-links">
+                        <a href="#facebook">Facebook</a>
+                        <a href="#instagram">Instagram</a>
+                        <a href="#twitter">Twitter</a>
+                        <a href="#other">Other</a>
+                    </div>
+
+                    <!-- contacts -->
+                    <div class="soc-contacts">
+                        <a href="#twitter">Ortigas Ave., Ext., 22 Ortigas Ave,
+                            Pasig, 1608 Metro Manila</a>
+                        <a href="#facebook">1234-567-89</a>
+                        <a href="#instagram">email@email.com.ph</a>
+                    </div>
+                </div>
+            </div>
+
+            <h2 class="patent">ICON Graphics Inc. All Rights Reserved.</h2>
+        </div>
+
 
        
     </body>
