--- a/photocard.html
+++ b/photocard.html
@@ -52,16 +52,62 @@
                         <span class="border">></span>
                         <a href="#photocard">Photo Card</a>
                     </div>
+
+                    <!-- end: brand-one -->
                 </div>
 
                 <div class="brand-two">
+                    <div class="brand-details">
+                        <div class="info-one">
+                            <h1>Products</h1>
 
+                            <div class="text">
+                                <ul>
+                                    <li class="del">Free Delivery.</li>
+                                    <li class="del">Printed Locally, fast delivery.</li>
+                                    <li class="del">Choose over 130 design templates.</li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="info-one">
+                            <h1>Delivery Options</h1>
 
+                            <div class="text">
+                                <ul>
+                                    <li class="led">LBC</li>
+                                    <li class="led">J&T</li>
+                                    <li class="led">DHL</li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="info-one">
+                            <h1>Specifications</h1>
 
+                            <div class="text">
+                                <ul>
+                                    <li class="led">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li>
+                                    <li class="led">Nullam lacinia leo vel risus volutpat pellentesque.</li>
+                                    <li class="led">Etiam maximus ipsum quis libero vulputate, id maximus libero suscipit.</li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
 
-
-
-                    
+                    <div class="info-two">
+                        <div class="photodisplay">
+                            <div class="main">
+                                <img id="main-image" src="resources/Y1.png">
+                            </div>
+                            <div class="slides">
+                                <img class="thumbnail" src="resources/Y1.png">
+                                <img class="thumbnail" src="resources/Y2.png">
+                                <img class="thumbnail" src="resources/Y3.png">
+                                <img class="thumbnail" src="resources/Y1.png">
+                            </div>
+                        </div>
+                    </div>
+   
+                    <!-- end: brand-two -->
                 </div>
 
 
