--- a/contact.html
+++ b/contact.html
@@ -27,7 +27,7 @@
                 <a href="index.html">Home</a>
                 <a href="products.html">Products</a>
                 <a href="feedback.html">Feedback</a>
-                <a href="#shipping">Shipping</a>
+                <a href="shipping.html">Shipping</a>
                 <a class="active">Contact</a>
             </div>
 
