--- a/feedback.html
+++ b/feedback.html
@@ -26,7 +26,7 @@
                 <a href="index.html">Home</a>
                 <a href="products.html">Products</a>
                 <a class="active">Feedback</a>
-                <a href="#shipping">Shipping</a>
+                <a href="shipping.html">Shipping</a>
                 <a href="contact.html">Contact</a>
             </div>
 
