--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <a class="active">Home</a>
                 <a href="products.html">Products</a>
                 <a href="feedback.html">Feedback</a>
-                <a href="#shipping">Shipping</a>
+                <a href="shipping.html">Shipping</a>
                 <a href="contact.html">Contact</a>
             </div>
 
