--- a/photocard.html
+++ b/photocard.html
@@ -40,6 +40,13 @@
             </div>
         </div>
 
+        <!-- Popup Container -->
+        <div class="popup-container" id="popupContainer">
+            <div class="white-window">
+
+            </div>
+        </div>
+
         <div class="index">
 
             <!-- first -->
@@ -105,49 +112,30 @@
                                 <img class="thumbnail" src="resources/Y1.png">
                             </div>
                         </div>
+
+                        <div class="card-info">
+                            <h5>Ratings: 8/10</h5>
+                            <h1>Photo Card 1</h1>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam lacinia leo vel risus volutpat pellentesque. Etiam maximus ipsum quis libero vulputate, id maximus libero suscipit.</p>
+                            <button class="cart">Add to cart</button>
+                        </div>
                     </div>
    
                     <!-- end: brand-two -->
+                </div>  
+            </div>
+
+            <!-- fifth -->
+            <div class="fifth">
+                <div class="related">
+                    <h2 class="prod-h2-c">Related Products</h2>
+
+                    <div class="related-d">
+                        <div class="cards-d"></div>
+                        <div class="cards-d"></div>
+                        <div class="cards-d"></div>
+                    </div>
                 </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-                
             </div>
 
             <!-- sixth -->
