--- a/photocard.html
+++ b/photocard.html
@@ -42,6 +42,12 @@
 
         <!-- Popup Container -->
         <div class="popup-container" id="popupContainer">
+
+            <div class="order-title">
+                <h1>Order Details: Photo Card 1</h1>
+                <a href="#back">back</a>
+            </div>
+
             <div class="white-window">
 
             </div>
