--- a/photocard.html
+++ b/photocard.html
@@ -42,14 +42,15 @@
 
         <!-- Popup Container -->
         <div class="popup-container" id="popupContainer">
-
-            <div class="order-title">
-                <h1>Order Details: Photo Card 1</h1>
-                <a href="#back">back</a>
-            </div>
-
-            <div class="white-window">
-
+            <div class="popup">
+                <div class="order-title">
+                    <a href="#" class="close-popup" onclick="closePopup()">Back</a>
+                    <div class="order-details">Order Details: Photo Card 1</div>
+                </div>
+    
+                <div class="white-window">
+    
+                </div>
             </div>
         </div>
 
