--- a/products.html
+++ b/products.html
@@ -25,7 +25,7 @@
                 <a href="index.html">Home</a>
                 <a class="active" href="#products">Products</a>
                 <a href="feedback.html">Feedback</a>
-                <a href="#shipping">Shipping</a>
+                <a href="shipping.html">Shipping</a>
                 <a href="contact.html">Contact</a>
             </div>
 
