--- a/shipping.html
+++ b/shipping.html
@@ -183,6 +183,7 @@
       
 
         <script src="jscript/shipping.js"></script>
+        <script src="jscript/index.js"></script>
            
     </body>
 </html>
