--- a/contact.html
+++ b/contact.html
@@ -67,7 +67,7 @@
          <!--ICON address section--> 
             <div class="column">
                 <div class="icon-add">
-                    <p>ICON Graphics Inc.</P>
+                    <p><b>ICON Graphics Inc.</b></P>
                     <p id="add-only">Ortigas Ave., Ext., 22 Ortigas Ave,<br>Pasig, 1608 Metro Manila</p>
                 </div>     
             </div>
@@ -77,7 +77,7 @@
                     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3861.1690485042504!2d121.09598417414945!3d14
                     .589441277351682!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3397c7671b164a0b%3A0x4959ba8a60ceca5a!2sICON%20Graphics%20Inc
                     .!5e0!3m2!1sen!2sph!4v1713668749672!5m2!1sen!2sph" 
-                    width="350" height="500" style="border:0px; border-radius: 10px;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    width="350" height="500" style="border:0px; border-radius: 25px;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </div>
             </div>               
         </div> 
@@ -108,6 +108,8 @@
 
             <h2 class="patent">ICON Graphics Inc. All Rights Reserved.</h2>
         </div>
+
+        <script src="jscript/index.js"></script>
      
     </body>
 </html>
