--- a/shipping.html
+++ b/shipping.html
@@ -29,7 +29,7 @@
                 <a href="products.html">Products</a>
                 <a href="feedback.html">Feedback</a>
                 <a class="active">Shipping</a>
-                <a href="contact.html">Contact</a>
+                <a href="#contacts" class="contacts">Contact</a>
             </div>
 
             <!-- cart button -->
@@ -40,6 +40,45 @@
                 <div class="bar"></div>
                 <div class="bar"></div>
                 <div class="bar"></div>
+            </div>
+        </div>
+
+        <!-- Popup Container -->
+        <div class="popup" id="popup-id">
+            <div class="popupview">
+                <div class="contact-d">
+                    <div class="contact-one">
+                        <div class="inside-one">
+                            <h1>Reach us out via provided contact details.</h1>
+                            <p class="head">Phone Numbers</p>
+                            <p class="numbers">Smart:   +639123456789<br>Globe: +639123456789</p>
+                            <p class="tel">Telephone No:    1234-567-89</p>
+                            <p class="email">Email Address:   email@email.com.ph</p>
+                        </div>
+                    </div>
+                    <div class="contact-two">
+                        <div class="inside-two">
+                            <div class="textme">
+                                <p class="icon">ICON Graphics Inc.</p>
+                                <p class="add">Ortigas Ave., Ext., 22 Ortigas Ave, Pasig,<br>1608 Metro Manila</p>
+                            </div>
+                            <div class="seeme">
+                                <iframe
+                                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3861.1690485042504!2d121.09598417414945!3d14
+                                .589441277351682!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3397c7671b164a0b%3A0x4959ba8a60ceca5a!2sICON%20Graphics%20Inc
+                                .!5e0!3m2!1sen!2sph!4v1713668749672!5m2!1sen!2sph" 
+                                style="border:0px; 
+                                       border-radius: 25px;" 
+                                width="350" 
+                                height="350"
+                                allowfullscreen="" 
+                                loading="lazy"
+                                referrerpolicy="no-referrer-when-downgrade">
+                                </iframe>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
 
